Failure template implementation

--- a/Views/Verifications/Failure.cshtml
+++ b/Views/Verifications/Failure.cshtml
@@ -2,4 +2,7 @@
     Layout = "_Layout";
 }
 
-<h2>title</h2>
+<div class="text-center my-8">
+    <h1 class="text-4xl font-black text-red-600">Verifikace selhala</h1> 
+    <h2 class="mt-8 text-2xl text-gray-500">Pokud problém přetrvá, napiš někomu z adminů</h2>
+</div>
