Change success note

--- a/Views/Verifications/Success.cshtml
+++ b/Views/Verifications/Success.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center my-8">
     <h1 class="text-4xl font-black text-green-600">Verifikace proběhla úspěšně</h1> 
-    <h2 class="mt-8 text-2xl text-gray-500">Během chvíle ti bude na serveru přidělena role</h2>
+    <h2 class="mt-8 text-2xl text-gray-500">Může trvat několik minut, než se verifikace propíše do ostatních systémů</h2>
 </div>
