--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 <div class="container mx-auto p-8">
     <header class="flex flex-col items-center md:flex-row md:justify-between lg:w-2/3 lg:mx-auto">
         <h1 class="text-4xl font-black order-2 mt-4 md:order-1 md:mt-0">VŠE Verifikace</h1>
-        <img class="w-32 h-32 md:w-16 md:h-16 order-1 md:order-2" alt="Verification icon" src="https://localhost:7137/verification.png"/>
+        <img class="w-32 h-32 md:w-16 md:h-16 order-1 md:order-2" alt="Verification icon" src="/verification.png"/>
     </header>
     
     <hr class="my-12"/>
